--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/*
+                  /\_/\
+              = ( • . • ) =
+                /      \     
+
+*/
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -66,3 +73,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+/*
+    ᓚᘏᗢ
+*/
