--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,38 @@
 h2, h3, h4, p, li { text-align: left; }
 
 .center { text-align: center; }
+
+.bingo-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  border: 4px solid black;
+}
+
+.bingo-cell {
+  border: 2px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 4px;
+  background: white;
+}
+
+.bingo-cell img {
+  width: 100%;
+  height: 15vh;
+  object-fit: cover;
+}
+
+.bingo-label {
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 4px;
+}
+
+.bingo-cell.marked {
+  background: #ffd700;
+}
