--- a/src/App.css
+++ b/src/App.css
@@ -48,9 +48,10 @@ h2, h3, h4, p, li { text-align: left; }
 .bingo-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: 100%;
+  width: 80%;
   aspect-ratio: 1 / 1;
   border: 4px solid black;
+  margin: 0 auto;
 }
 
 .bingo-cell {
@@ -66,7 +67,9 @@ h2, h3, h4, p, li { text-align: left; }
 .bingo-cell img {
   width: 100%;
   height: 15vh;
-  object-fit: cover;
+  /* object-fit: cover; */
+  object-fit: contain;
+  object-position: center;
 }
 
 .bingo-label {
